--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<!-- Hero section -->
 	<div class="main">
-		<div class="main__container">
+		<div class="main__container" id="index_container">
 			<div class="main__content">
 				<h1>Embat's Website</h1>
 				<!--<h2>A website</h2>-->
@@ -57,7 +57,7 @@
 	</div>
 
 	<!-- Footer -->
-	<div class="footer__container">
+	<div class="footer__container" id="main_footer">
 
 	</div>
 
