--- a/accounts.html
+++ b/accounts.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="account__container" id="container_padding_down">
+		<div class="account__container">
 			<div onclick="location.href='https://www.roblox.com/users/165941817/profile'" class="account__card" id="roblox">
 				<h2>
 					Roblox
@@ -73,6 +73,14 @@
 			<div onclick="location.href='https://github.com/EmbatTheHybrid'" class="account__card" id="github">
 				<h2>
 					Github
+				</h2>
+			</div>
+		</div>
+
+		<div class="account__container" id="container_padding_down">
+			<div id="discord" class="account__card">
+				<h2>
+					Embat#2905
 				</h2>
 			</div>
 		</div>
