Made the discord button not hover since it's not a button

--- a/accounts.html
+++ b/accounts.html
@@ -78,7 +78,7 @@
 		</div>
 
 		<div class="account__container" id="container_padding_down">
-			<div id="discord" class="account__card">
+			<div id="discord" class="account__card_nohover">
 				<h2>
 					Embat#2905
 				</h2>
