Made the iamges be able to be right clicked as well
Made the images open a new tab rather than change the current link

--- a/accounts.html
+++ b/accounts.html
@@ -50,31 +50,31 @@
 
 	<div class="account">
 		<div class="account__container">
-			<div onclick="location.href='https://twitter.com/EmbatTheHybrid'" class="account__card" id="twitter">
+			<a href='https://twitter.com/EmbatTheHybrid' target="_blank" class="account__card" id="twitter">
 				<h2>
 					Twitter
 				</h2>
-			</div>
+			</a>
 		
-			<div onclick="location.href='https://www.youtube.com/channel/UCxFxFxKiNLkF9DJekDMgXEg'" class="account__card" id="youtube">
+			<a href='https://www.youtube.com/channel/UCxFxFxKiNLkF9DJekDMgXEg' target="_blank" class="account__card" id="youtube">
 				<h2>
 					Youtube
 				</h2>
-			</div>
+			</a>
 		</div>
 
 		<div class="account__container">
-			<div onclick="location.href='https://www.roblox.com/users/165941817/profile'" class="account__card" id="roblox">
+			<a href='https://www.roblox.com/users/165941817/profile' target="_blank" class="account__card" id="roblox">
 				<h2>
 					Roblox
 				</h2>
-			</div>
+			</a>
 		
-			<div onclick="location.href='https://github.com/EmbatTheHybrid'" class="account__card" id="github">
+			<a href='https://github.com/EmbatTheHybrid' target="_blank" class="account__card" id="github">
 				<h2>
 					Github
 				</h2>
-			</div>
+			</a>
 		</div>
 
 		<div class="account__container" id="container_padding_down">
