Added hiding and visible scroll bar for small screens Added a background gradient Fixed some styling and html

--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
 	</nav>
 
 	<!-- Hero section -->
-	<div class="aboutme">
+	<div class="main">
 		<div class="main__container" id="accounts_container">
 			<div class="main__content">
 				<h1>About me</h1>
