Removal of a now useless class Fixed the scaling issue with the buttons on mobile

--- a/accounts.html
+++ b/accounts.html
@@ -75,7 +75,7 @@
 			</a>
 		</div>
 
-		<div class="account__container" id="container_padding_down">
+		<div class="account__container">
 			<div class="account__card_nohover" id="discord">
 				<h2>
 					Embat#2905
