--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<b id="more-information">Click on the buttons on the top to navigate!</b>
 				</button>
 			</div>
-			<div class="main__img-cotainer">
+			<div class="main__img-container">
 				<img src="images/EmMain.png" alt="pic" id="main__img">
 			</div>
 		</div>
