More edits and improvements

--- a/accounts.html
+++ b/accounts.html
@@ -40,7 +40,7 @@
 	<!-- Hero section -->
 	<div class="main">
 		<div class="main__container" id="accounts_container">
-			<div class="main__content">
+			<div class="main__content" id="account_info">
 				<h1>Accounts</h1>
 				<b id="more-information">Most of my accounts that are important</b>
 				</button>
