--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>EmSite</title>
-		<link rel="stylesheet" href="/main/styles.css" />
+		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body>
 		<!-- Navbar -->
@@ -19,17 +19,17 @@
 			</div>
 			<ul class="navbar__menu">
 				<li class="navbar__item">
-					<a href="/main/index.html" class="navbar__links">
+					<a href="./index.html" class="navbar__links">
 						Home
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="/main/aboutme.html" class="navbar__links">
+					<a href="./aboutme.html" class="navbar__links">
 						About me
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="/main/accounts.html" class="navbar__links">
+					<a href="./accounts.html" class="navbar__links">
 						Accounts
 					</a>
 				</li>
@@ -61,6 +61,6 @@
 
 	</div>
 
-	<script src="/main/app.js"></script>
+	<script src="./app.js"></script>
 	</body>
 </html>
