--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</button>
 			</div>
 			<div class="main__img-container">
-				<img src="images/EmMain.png" alt="pic" id="main__img">
+				<img src="./images/EmMain.png" alt="pic" id="main__img">
 			</div>
 		</div>
 	</div>
