--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<ul class="navbar__menu">
 				<li class="navbar__item">
-					<a href="./Infinite-Embat" class="navbar__links">
+					<a href="./index.html" class="navbar__links">
 						Home
 					</a>
 				</li>
