Adding of the Work section Adding Infinite Embat to it

--- a/accounts.html
+++ b/accounts.html
@@ -29,6 +29,11 @@
 					</a>
 				</li>
 				<li class="navbar__item">
+					<a href="./mywork.html" class="navbar__links">
+						My Work
+					</a>
+				</li>
+				<li class="navbar__item">
 					<a href="./accounts.html" class="navbar__links">
 						Accounts
 					</a>
