--- a/mywork.html
+++ b/mywork.html
@@ -45,19 +45,18 @@
 	<!-- Hero section -->
 	<div class="main">
 		<div class="main__container" id="accounts_container">
-			<div class="main__content">
-				<h1>About me</h1>
-				</button>
+			<div class="main__content" id="account_info">
+				<h1>My work</h1>
+				<b id="more-information">Work that I'm confident in showing people, usually anything</b>
 			</div>
 		</div>
 
-		<div class="main__container" id="about_container">
-			<div class="main__content" id="about_content">
-				<b id="about-me">I am a 17 year old girl from Malta that enjoys anything that allows me to get creatively, though typically I tend to focus more on programming. Besides programming, I also like to draw or do anything else that I find interesting! ^^</b>
-				<br>
-				<br>
-				<b id="about-me">I haven't really shown much about any of my progress/finished projects nowadays, but hopefully I plan to change that and try to build a portfolio in a sense by displaying my progress and projects in any place I can, be it programming on github or using my twitter for showing art. I hope you'll follow along my joruney to improve in these hobbies I enjoy and see how far I come :3</b>
-			</div>
+		<div class="account__container">
+			<a href='./Infinite-Embat' target="_blank" class="work__card" id="infiniteEmbat">
+				<h1>
+					Infinite Embat
+				</h1>
+			</a>
 		</div>
 	</div>
 
