--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
 				<b id="about-me">I am a 17 year old girl from Malta that enjoys anything that allows me to get creatively, though typically I tend to focus more on programming. Besides programming, I also like to draw or do anything else that I find interesting! ^^</b>
 				<br>
 				<br>
-				<b id="about-me">I haven't really shown much about any of my progress/finished projects nowadays, but hopefully I plan to change that and try to build a portfolio in a sense by displaying my progress and projects in any place I can, be it programming on github or using my twitter for showing art. I hope you'll follow along my joruney to improve in these hobbies I enjoy and see how far I come :3</b>
+				<b id="about-me">I haven't really shown much about any of my progress/finished projects nowadays, but hopefully I plan to change that and try to build a portfolio in a sense by displaying my progress and projects in any place I can, be it programming on github or using my twitter for showing art. I hope you'll follow along my journey to improve in these hobbies I enjoy and see how far I come :3</b>
 			</div>
 		</div>
 	</div>
