Addition of emsweeper

--- a/mywork.html
+++ b/mywork.html
@@ -57,6 +57,12 @@
 					Infinite Embat
 				</h1>
 			</a>
+
+			<a href='./Emsweeper' target="_blank" class="work__card" id="emsweeper">
+				<h1>
+					Emsweeper
+				</h1>
+			</a>
 		</div>
 	</div>
 
