Edition of new page

--- a/mywork.html
+++ b/mywork.html
@@ -63,6 +63,13 @@
 				</h1>
 			</a>
 		</div>
+		<div class="account__container">
+			<a href='./Guess-The-Character' target="_blank" class="work__card" id="guessTheCharacter">
+				<h1>
+					Guess the Character
+				</h1>
+			</a>
+		</div>
 	</div>
 
 	<!-- Footer -->
