--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="author" content="Embat">
+		<meta name="description" content="Personal portfolio website">
+		<meta name="keywords" content="embat, portfolio">
 		<title>EmSite</title>
 		<link rel="stylesheet" href="./styles.css" />
 	</head>
